# autonomous-app-foundry

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  baslat.sh  docker-compose.yml  pyproject.toml  requirements.txt  test_communication.py  worker.py
agents/: base_agent.py
api/: main.py
api/dependencies/: db_deps.py
api/middlewares/: exception_handler.py
api/routers/: projects.py
core/: config.py  exceptions.py  logger.py  orchestrator.py  resilience.py
memory/: database.py
memory/migrations/: env.py
memory/models/: __init__.py  definitions.py
memory/repositories/: base.py  project_repo.py  projects.py  task_repo.py
memory/vector_store/: chroma_client.py
sandbox/: docker_manager.py
shared/events/: message_bus.py
shared/schemas/: events.py  project_schemas.py  task_schemas.py
tests/: conftest.py  test_health.py
