[tool.poetry]
name = "cognita-core"
version = "0.1.0"
description = "Cognita AI Agent Ecosystem"
authors = ["Mehmet & AI <admin@cognita.local>"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.per-file-ignores]
"memory/migrations/env.py" = ["F401", "E402"]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
